# syntax

./: .gitignore  LICENSE.txt  README.md  README.txt  compile-syntax.sh  project1.conf  run-test-esope
outdated/deleted/autoconf/: Makefile.am  acinclude.m4
outdated/deleted/autoconf/DAG/: Makefile.am
outdated/deleted/autoconf/bnf/lib/: Makefile.am
outdated/deleted/autoconf/csynt_lc/lib/: Makefile.am
outdated/deleted/autoconf/dico/: Makefile.am
outdated/deleted/autoconf/dico/lib/: Makefile.am
outdated/deleted/autoconf/dummy_csynt/lib/: Makefile.am
outdated/deleted/autoconf/examples/cx/: configure.ac
outdated/deleted/autoconf/lib/: Makefile.am
outdated/deleted/autoconf/paradis/: Makefile.am
outdated/deleted/autoconf/paradis/lib/: Makefile.am
outdated/deleted/autoconf/prio/: Makefile.am
outdated/deleted/autoconf/rcg/lib/: Makefile.am
outdated/deleted/autoconf/recor/: Makefile.am
outdated/deleted/autoconf/semact/: Makefile.am
outdated/deleted/autoconf/semc/: Makefile.am
outdated/deleted/autoconf/tdef/: Makefile.am
outdated/deleted/autoconf/xbnf/: Makefile.am
outdated/deleted/autoconf/ysx/: Makefile.am
outdated/tags/6.0b2/DAG/: Makefile.am  autogenese
outdated/tags/6.0b2/DAG/incl/: dag_scanner.h
outdated/tags/6.0b2/DAG/spec/: dag.at  udag.lecl
outdated/tags/6.0b2/bnf/: Makefile.am  autogenese
outdated/tags/6.0b2/bnf/doc/: bnf.1
outdated/tags/6.0b2/bnf/spec/: bnf.lecl  bnf_dst.c  make_proper.recor
outdated/tags/6.0b2/bnf/src/: bnf_dump.c  bnf_folcon.c  bnf_lo.c  bnf_protest.c  bnf_symtab.c  bnf_t.c  check_bnf.c  make_proper_t.c  print_bt.c
outdated/tags/6.0b2/csynt_lc/lib/: Makefile.am
outdated/tags/6.0b2/doc/man/: Makefile.am  semact.1  st_to_c.1  sxparser.3
outdated/tags/6.0b2/lib/: Makefile.am
outdated/tags/6.0b2/tabc/: Makefile.am  autogenese  sxmakefile
outdated/tags/6.0b2/tabc/incl/: tabc_vars.h
outdated/tags/6.0b2/tabc/lib/: Makefile.am
outdated/tags/6.0b2/tabc/spec/: dec.tabc
outdated/tags/6.0b2/tabc/src/: tabc.c  tabc_main.c
outdated/tags/6.0b3/: Makefile.am  configure.ac  s.Makefile  sxmakefile  syntax.m4
outdated/tags/6.0b3/DAG/: re_main_sample.c
outdated/tags/6.0b3/DAG/incl/: dag_t.h
outdated/tags/6.0b3/DAG/spec/: re.lecl  text.lecl  udag.bnf
outdated/tags/6.0b3/bnf/: Makefile.am
outdated/tags/6.0b3/bnf/lib/: Makefile.am
outdated/tags/6.0b3/bnf/spec/: bnf.recor  bnf_dst.c  make_proper.bnf
outdated/tags/6.0b3/bnf/src/: bnf_dump.c  bnf_folcon.c  bnf_huge.c  bnf_lo.c  bnf_protest.c  bnf_t.c  make_proper_t.c
outdated/tags/6.0b3/csynt/src/: LALR1.c  OPTIM.c  csynt.c  la_set.c  single.c  xprdct_mngr.c
outdated/tags/6.0b3/csynt_lc/incl/: lc.h
outdated/tags/6.0b3/csynt_lc/test/: sxearley_main.c
outdated/tags/6.0b3/dico/spec/: dico.lecl
outdated/tags/6.0b3/dico/src/: dico_main.c
outdated/tags/6.0b3/doc/: .dbxinit  NOUVEAUTES  help  man  syntax_aim.tex
outdated/tags/6.0b3/dummy_csynt/: sxmakefile
outdated/tags/6.0b3/dummy_csynt/lib/: Makefile.am
outdated/tags/6.0b3/dummy_csynt/src/: dummy_csynt.c
outdated/tags/6.0b3/etc/doc/: bitstr.info
outdated/tags/6.0b3/etc/incl/: B_tables.h  D_tables.h  P_tables.h  R_tables.h  T_tables.h  lig.h
outdated/tags/6.0b3/etc/src/: bnfread.c  bstr.c  leclfree.c  leclread.c  leclwrite.c  paradisfree.c  paradisread.c  parserfree.c  parserread.c  parserwrite.c  priofree.c  prioread.c  priowrite.c  recorfree.c  recorread.c  recorwrite.c  sematfree.c
outdated/tags/6.0b3/examples/Chimie/: Makefile  main.c  test3.chimie
outdated/tags/6.0b3/examples/Lustre/: main.c
outdated/tags/6.0b3/examples/Petit_Langage/: sem.c  sem.h  test3.petitlangage
outdated/tags/6.0b3/examples/idcounter/: lolo.lecl
outdated/tags/6.0b3/examples/ppada/: autogenese  makefile
outdated/tags/6.0b3/examples/ppc/: autogenese
outdated/tags/6.0b3/incl/: SS.h  SXDRCGsem_fun.h  X_rep.h  XxY.h  XxYxZ.h  dag_scanner.h  drcg_glbl.h  earley.h  herbrand.h  lex_lfg.h  nbest.h  put_edit.h  rcg_sglbl.h  reg_exp_sact.h  sxDAG_CFG.h  sxalloc.h  sxba.h  sxcheck_keyword.h  sxcommon.h  sxdynam_scanner.h  sxindex.h  sxlist.h  sxmatrix2vector.h  sxscrmbl.h  sxsubset.h  sxsymbol_table.h  sxunix.h  udag_scanner.h  varstr.h
outdated/tags/6.0b3/lecl/doc/: lecl.1  pplecl.1
outdated/tags/6.0b3/lecl/incl/: lecl_nn.h  lecl_pcn.h
outdated/tags/6.0b3/lecl/lib/: Makefile.am
outdated/tags/6.0b3/lecl/spec/: lecl.lecl
outdated/tags/6.0b3/lecl/src/: gen_check_kw.c  get_a_part.c  get_col_nb.c  lecl_ag_free.c  lecl_diagnos.c  lecl_fsa.c  lecl_gn.c  (+13 more)
outdated/tags/6.0b3/lfg/: autogenese
outdated/tags/6.0b3/oldies/: Nouvelle_version_de_SYNTAX  SEND  filter.sed  taro
outdated/tags/6.0b3/paradis/: autogenese  sxmakefile
outdated/tags/6.0b3/prio/: autogenese  sxmakefile
outdated/tags/6.0b3/rcg/: Makefile.am  autogenese  sxmakefile
outdated/tags/6.0b3/recor/: autogenese
outdated/tags/6.0b3/semact/: autogenese  sxmakefile
outdated/tags/6.0b3/semat/: autogenese
outdated/tags/6.0b3/src/: LFSA_parser.c  RCG_main.c  RFSA_parser.c  SS_mngr.c  XxYxZ_mngr.c  earley_parser.c  eq_sort.c  make_proper_main.c  make_tdef_main.c  nbest_semact.c  puteditcut.c  puteditnl.c  puteditpos.c  sxatc.c  sxatcpp.c  sxatedit.c  sxba_ops3.c  sxbag_mngr.c  sxbitsarray.c  sxdico_process.c  sxdparser_ndt.c  sxdynam_scanner.c  sxearley_main.c  sxmain.c  sxmatrix2vector.c  sxndscanner.c  sxndtoken_mngr.c  sxndtreewalker.c  sxopentty.c  sxp_rcvr.c  sxp_srcvr.c  sxppp.c  sxpptree.c  sxspell_mngr.c  sxspf_mngr.c  sxstr_mngr.c  sxsubset_mngr.c  sxtm_mngr.c  sxtmpfile.c  udag_scanner.c  (+1 more)
outdated/tags/6.0b3/tabc/: sxmakefile
outdated/tags/6.0b3/tables/: sxmakefile
outdated/tags/6.0b3/tdef/: autogenese  sxmakefile
outdated/tags/6.0b3/vasy/: vasy-check-compat64.sh  vasy-prepare-directories.sh  vasymake
outdated/tags/6.0b3/xbnf/: autogenese  makenew  sxmakefile
outdated/tags/6.0b3/xcsynt/: Makefile.am
outdated/tags/6.0b3/ysx/: Makefile.am
outdated/tags/6.0b4/syntax-core/: configure.ac  syntax-core.m4
outdated/tags/6.0devel/DAG/: Makefile.am  autogenese  re_main_sample.c
outdated/tags/6.0devel/lib/: Makefile.am
(+5215 files in other folders)
