dist_man_MANS = 	bnf.1		\
			csynt.1		\
			cx.1		\
			lecl.1		\
			mix.1		\
			paradis.1	\
			ppc.1		\
			pplecl.1	\
			pprecor.1	\
			pptdef.1	\
			prio.1		\
			recor.1		\
			semact.1	\
			semat.1		\
			st_to_c.1	\
			tdef.1		\
			ysx.1		\
			\
			sxat_mngr.3	\
			sxatc.3		\
			sxatedit.3	\
			sxbitsarray.3	\
			sxincl_mngr.3	\
			sxparser.3	\
			sxppp.3		\
			sxscanner.3	\
			sxsrc_mngr.3	\
			sxstr_mngr.3

